# xtp_api_java

./: .gitattributes  .gitignore  LICENSE  README.md  build.gradle  gradle.properties  gradlew  settings.gradle  user.config.properites
cpp/: CMakeLists.txt
cpp/buildWin32/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cpp32.sln  install_manifest.txt  quoteplugin.vcxproj  quoteplugin.vcxproj.filters  tradeplugin.vcxproj  tradeplugin.vcxproj.filters
cpp/buildWin32/Win32/Release/INSTALL/INSTALL.tlog/: INSTALL.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
cpp/buildWin64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cpp64.sln  install_manifest.txt  quoteplugin.vcxproj  quoteplugin.vcxproj.filters  tradeplugin.vcxproj  tradeplugin.vcxproj.filters
cpp/buildWin64/x64/Debug/INSTALL/INSTALL.tlog/: INSTALL.lastbuildstate  custombuild.command.1.tlog
cpp/buildWin64/x64/Release/INSTALL/INSTALL.tlog/: INSTALL.lastbuildstate  custombuild.read.1.tlog  custombuild.write.1.tlog
cpp/buildcpp/macosx/: libquoteplugin.dylib  libtradeplugin.dylib
cpp/dependsLibSrc/gflags-master/: CMakeLists.txt
cpp/dependsLibSrc/glog-master/: CMakeLists.txt  Makefile  Makefile.in  aclocal.m4  config.status  configure  demangle_unittest  libglog.la  libtool  logging_striptest0  logging_striptest10  logging_striptest2  logging_unittest  signalhandler_unittest  stacktrace_unittest  stl_logging_unittest  symbolize_pie_unittest  symbolize_unittest  utilities_unittest
cpp/dependsLibSrc/glog-master/.libs/: demangle_unittest  libglog.lai  logging_striptest0  logging_striptest10  logging_striptest2  logging_unittest  signalhandler_unittest  stacktrace_unittest  stl_logging_unittest  symbolize_pie_unittest  symbolize_unittest  utilities_unittest
cpp/dependsLibSrc/glog-master/src/: config.h.in  libglog_la-demangle.lo  libglog_la-logging.lo  libglog_la-raw_logging.lo  libglog_la-signalhandler.lo  libglog_la-symbolize.lo  libglog_la-utilities.lo  libglog_la-vlog_is_on.lo  logging.cc  utilities.cc
cpp/dependsLibSrc/glog-master/src/.deps/: demangle_unittest-demangle_unittest.Po  libglog_la-demangle.Plo  libglog_la-logging.Plo  libglog_la-raw_logging.Plo  libglog_la-signalhandler.Plo  libglog_la-symbolize.Plo  libglog_la-utilities.Plo  libglog_la-vlog_is_on.Plo  logging_striptest0-logging_striptest_main.Po  logging_striptest10-logging_striptest10.Po  logging_striptest2-logging_striptest2.Po  logging_unittest-logging_unittest.Po  signalhandler_unittest-signalhandler_unittest.Po  stacktrace_unittest-stacktrace_unittest.Po  stl_logging_unittest-stl_logging_unittest.Po  symbolize_pie_unittest-symbolize_unittest.Po  symbolize_unittest-symbolize_unittest.Po  utilities_unittest-utilities_unittest.Po
cpp/dependsLibSrc/glog-master/src/glog/: raw_logging.h.in
cpp/dependsLibSrc/glog-master/src/windows/glog/: logging.h
cpp/lib/macosx/: libglog.dylib
cpp/lib/win32/dll/: glog.lib
cpp/lib/win64/dll/: glog.lib
cpp/src/: InitGlog.cpp  RingBuffer.cpp  XtpQuoteAdapter.cpp  XtpQuoteApi.cpp  XtpTradeAdapter.cpp  XtpTradeApi.cpp  libquoteplugin.dylib  libtradeplugin.dylib  quote_makefile  trade_makefile
cpp/src/include/: InitGlog.h  RingBuffer.hpp  XtpQuoteApi.h  XtpTradeApi.h  com_zts_xtp_quote_api_QuoteApi.h  com_zts_xtp_trade_api_TradeApi.h  handle.h  xquote_market_data_struct.h
cpp/src/include/xtp/: algo_api_struct.h  algo_data_type.h  xoms_api_struct.h  xtp_api_data_type.h  xtp_quote_api.h  xtp_trader_api.h
doc/: XTP API常见问题.doc  XTP错误代码速查表.doc
gradle/wrapper/: gradle-wrapper.properties
src/main/java/com/zts/xtp/common/enums/: AccountType.java  BusinessType.java  CrdCrStatus.java  DebtExtendOperStatus.java  EtfReplaceType.java  ExchangeType.java  FundOperStatus.java  FundTransferType.java  JniLogLevel.java  MarketDataType.java  MarketType.java  OptCallOrPutType.java  OptExerciseType.java  OrderStatusType.java  OrderSubmitStatusType.java  PositionDirectionType.java  PositionEffectType.java  PositionSecurityType.java  PriceType.java  QualificationType.java  SecurityStatus.java  SecurityType.java  SideType.java  SplitMergeStatus.java  TickByTickType.java  TickerType.java  TransferProtocol.java  XTPFundQueryType.java  XTPStrategyStateType.java  XTPTerminalType.java  XtpLogLevel.java  XtpTeResumeType.java
src/main/java/com/zts/xtp/common/jni/: JNILoadLibrary.java
src/main/java/com/zts/xtp/common/model/: ErrorMessage.java  TickerStringMapCache.java
src/main/java/com/zts/xtp/quote/api/: QuoteApi.java
src/main/java/com/zts/xtp/quote/model/response/: DepthMarketDataExResponse.java  DepthMarketDataResponse.java  MarketDataBondExDataResponse.java  MarketDataOptionExDataResponse.java  MarketDataStockExDataResponse.java  OrderBookResponse.java  SpecificTickerResponse.java  TickByTickEntrustResponse.java  TickByTickResponse.java  TickByTickTradeResponse.java  TickerFullInfoResponse.java  TickerInfoResponse.java  TickerPriceInfoResponse.java
src/main/java/com/zts/xtp/quote/spi/: QuoteSpi.java
src/main/java/com/zts/xtp/trade/api/: TradeApi.java
src/main/java/com/zts/xtp/trade/model/request/: ETFBaseQueryRequest.java  ETFComponentQueryRequest.java  FundTransferLogQueryRequest.java  FundTransferRequest.java  OptionAuctionInfoRequest.java  OrderInsertRequest.java  OrderQueryByPageReq.java  OrderQueryRequest.java  StructuredFundInfoQueryRequest.java  TradeQueryByPageReq.java  TraderQueryRequest.java  XTPClientQueryCrdDebtStockReq.java  (+5 more)
src/main/java/com/zts/xtp/trade/spi/: TradeSpi.java
src/test/java/com/zts/xtp/quote/: QuoteApiTest.java  TestQuoteSpi.java
src/test/java/com/zts/xtp/trade/: TradeApiTest.java  TradeSpiImpl.java
src/test/java/com/zts/xtp/userInfo/: User.java
xtp_api_demo/: pom.xml  settings.gradle
xtp_api_demo/src/main/java/com/zts/xtp/demo/: Application.java
xtp_api_demo/src/main/java/com/zts/xtp/userInfo/: User.java
(+30 files in other folders)
